assets/template-giftcard.css
.main {
  height: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
}
header{
  display:flex;
flex-direction:column;
align-items:center;
justify-content:center;
}
.gift_card-logo{
   margin-top:16px;
margin-bottom:11px;
}
.gift_card-logo img{
  width:100%;
  height:100%;
  object-fit: cover;
}
.gift-container-design::before,
.gift-container-design::after {
content: "";
position: absolute;
top: 50%;
width: 67px;
height: 45px; 
border-radius: 50%;
}

.gift-container-design::before {
left: -50px;
transform: translateY(-50%);
}

.gift-container-design::after {
right: -50px; 
transform: translateY(-50%);
}


.triangle-top{
position: absolute;
top: 0;
right: 0;
width: 28px;
height: 17px;
border-style: solid;
border-width: 0 0 66px 118px;
z-index: 1;
clip-path: polygon(57% 0%, 64% 69%, 350% 63%);
}
.gift-card-triangle {
position: absolute;
bottom: 0;
right: 0;
width: 28px;
height: 48px;
border-style: solid;
border-width: 0 0 69px 112px;
z-index: 1;
clip-path: polygon(95% 48%, 1% 100%, 100% 77%);
}

.gift-container-design {
  margin: 40px;
  background-color: white;
  width: 100%;
  max-width: 700px; 
  min-width: 280px; 
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;

}
.gift-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding: 30px 15px;
  flex: 1;
  margin: 30px auto;
}
.gift-card-card {
  position: relative;
  display: inline-flex;
  width:250px;
  flex-direction: column;
  align-items: center;
  background-color:#FF5500;
  padding: clamp(20px, 5vw, 40px);
  margin: 20px 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  clip-path: polygon(81% 0, 100% 24%, 100% 87%, 62% 100%, 0 100%, 0% 60%, 0 0);
  overflow: visible;
}
.gift-card-main{
  align-items:center;
  display:flex;
  flex-direction:column;
}
.semicircle-border {
    position: absolute;
    top:30px;
    display: flex;
    justify-content: space-between;
    align-items:center;
    width: 90%;
    pointer-events: none; 
}
.semicircle {
  width: 30px;
  height: 15px;
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
  border-top: none;
}
.semicircle-border-down {
  position: absolute;
  bottom: 29px;  
  display: flex;
  justify-content: space-between;
  align-items:center;
  width: 90%;
  pointer-events: none; 
}
.semicircle-down {
  width: 30px;
  height: 15px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  border-bottom: none;
}
.gift-card-title {
font-family: 'Fira Sans', sans-serif; 
font-weight: 600; 
font-size: 39px; 
line-height:auto;
margin-bottom: 0px;
}
.gift-card-theme {
font-family: 'Fira Sans', sans-serif;
font-weight: 400; 
font-size: 15px;
line-height: auto;
letter-spacing: 3%;
text-align:center;
margin-bottom: 20px;
}
.gift-card-amount {
text-align: center;
    padding: 10px 35px;
border-radius:4px;
margin-bottom:40px;
width: fit-content;
background: rgba(255, 255, 255, 0.25);
box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
backdrop-filter: blur(1.7px);
-webkit-backdrop-filter: blur(1.7px);
border: 1px solid rgba(255, 255, 255, 0.95);
}
.gift-card-amount span {
font-family: 'Fira Sans', sans-serif;
font-weight: 600;
font-size: 26px;
line-height: auto;
letter-spacing: 0%;
}
.gift-card-code{
background: rgba(255, 255, 255, 0.25);
box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
backdrop-filter: blur(1.7px);
-webkit-backdrop-filter: blur(1.7px);
border: 1px solid rgba(255, 255, 255, 0.95);
padding: 8px 27px;
margin-bottom:10px;
border-radius:4px;
}
.gift-card-code span {
font-family: 'Inter', sans-serif;
font-weight: 500; /* Medium */
font-size: 17px;
}
.copy-button {
font-family: 'Inter', sans-serif;
font-weight: 400; 
font-size: 15px;
line-height: auto;
letter-spacing: 0%;
background: none;
border: none;
text-decoration: underline;
cursor: pointer;
padding: 0 5px;
}
.separator {
      font-family: Inter, sans-serif;
    font-weight: 400;
    font-size: 15px;
  display: flex;
  align-items: center;
   width: 40%; 
  margin: 15px auto;
}
.separator::before,
.separator::after {
content: '';
flex: 1;
}
.scan_qr_code{
display:flex;
justify-content:center;
margin-bottom:22px;
}
.gift-card__text-wrapper{
display:flex;
flex-direction:column;
align-items:center;
}
.separator span {
padding: 0 16px;
}
.gift-card__text{
font-family: 'Inter', sans-serif;
font-weight: 400;
font-size: 15px;
line-height: auto;
letter-spacing: 0%;
}
.button {
background-color:transparent;
height:42px;
width:135px;
border-radius: 5px;
text-align: center;
font-size: 1rem;
cursor: pointer;
}
.button-container {
display: flex;
justify-content:space-around;
}

.button--secondary {
display:flex;
text-decoration:none;
align-items:center;
justify-content:center;
  border:none;
}
.button--secondary span{
font-family: 'Fira Sans', sans-serif;
font-weight: 500; 
font-size: 16px;

}

.gift-card__image-wrapper {
display: flex;
justify-content: center;
align-items: center;
height: 100%;
max-width: 40rem;
}
.gift-card__image {
max-width: 100%;
height: auto;
object-fit: scale-down;
max-height: 26rem;
}
.gift-card__copy-button{
font-family: 'Fira Sans', sans-serif;
font-weight: 500; 
font-size: 16px;
line-height: auto;
letter-spacing: 0%;
}

.gift-card__buttons{
margin-bottom:21px;
}
.gift-card__qr-code img {
margin: 0 auto;
} 
.gift_card__apple-wallet {
line-height: 0;
display: block;
margin-bottom: 3rem;
text-align: center;
}
.scan_qr {
    margin-top: 19px;
text-align: center;
font-family: 'Inter', sans-serif;
font-weight: 400; 
font-size: 14px;
line-height: auto;
letter-spacing: 0%;
color:#FFFFFF;
}
@media (max-width: 768px) {
.semicircle-border, 
  .semicircle-border-down {
      width: 242%; 
      left: 41%;
      transform: translateX(-50%);
      overflow: hidden; 
  }

  .semicircle-border > *, 
  .semicircle-border-down > * {
      max-width: 100%; 
  }

.gift-container-design::before {
left: -32px;
transform: translateY(-50%);
}

.gift-container-design::after {
right: -32px; 
transform: translateY(-50%);
}
  
.gift_card-logo{
margin-bottom:24px;
}
.gift-container{
   padding:30px 3px;
  margin:30px 29px;
}
.gift-card-amount{
background-color:transparent;
padding:5px;
margin-bottom:0px;
}
.gift-card-amount span{
font-size: 2rem;
font-weight: bold;

}

.gift-card-main{
display:flex;
flex-direction:column;
align-items:center;
padding:20px;
border-radius:4px;
background-color:#FF5500;
}
.gift-card-triangle{
display:none;
}
.triangle-top{
display:none;
}
header {
margin-top:17px;
text-align: center;
}

.gift-card-title {
font-weight: bold;
}
.gift-card-theme {
font-size: 1rem;
}
.gift-card__image-wrapper {
text-align: center;
}
.gift-card-card {
box-shadow: none;
margin:0px;
padding:0px;
background-color:transparent;
display:flex;
flex-direction:column;
 padding: 10px 22px;
text-align: center;
clip-path:none;
}
.gift-card-code {

background:transparent;
box-shadow: none;
backdrop-filter:none;
-webkit-backdrop-filter:none;
border:0;
padding: 8px 27px;

border-radius:0px;

 background-color:transparent;
margin-bottom:0px;
padding:7px 22px;
}
.gift-card-code span {
font-family: monospace;
letter-spacing: 1px;
font-size: 14px;
}
.copy-button {
cursor: pointer;
font-size: 0.9rem;
margin-top: 25px;
}
.separator {
text-align: center;
color: #aaa;
margin: 15px 0;

}
.separator span {
font-size: 0.9rem;
}
.gift-card__text-wrapper{
margin-bottom:13px;
}

.gift-card__qr-code img {
  width: 100%;
  margin:0px;

}


.gift-card__qr-code {
width: 150px;
height: 150px;
margin: 0 auto 20px auto;
background-color: #e0e0e0;
border-radius: 10px;
}
.button-container {
display: flex;
flex-direction: column;
gap: 10px;
align-items:center;
}



}

